--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-¥¦¨¬ ΆλΆ®¤  ª®¬ ­¤ ­  νªΰ ­ (ECHO) Άª«ξη¥­.
+ΒΒ¥Β¦Β¨Β¬ ΒΆΓ«ΒΆΒ®Β¤Β  ΒªΒ®Β¬Β Β­Β¤ Β­Β  Γ­ΒªΓ Β Β­ (ECHO) ΒΆΒªΒ«Γ®Γ§Β¥Β­.
 __pycache__/
 .idea/
 main.py
+Operation_Systems/lr1/lr1
